# open-unmix-pytorch

./: .flake8  .gitignore  .travis.yml  CONTRIBUTING.md  Dockerfile  LICENSE  Pipfile  README.md  README_train.md  create_dataset.py  data.py  environment-cpu-linux.yml  environment-cpu-osx.yml  environment-gpu-linux-cuda10.yml  environment-gpu-linux-cuda92.yml  eval.py  filtering.py  hubconf.py  kurac.py  loaders.py  model.py  prepare_tests.sh  pyproject.toml  sampling.py  setup.py  test.py  todo.md  torch_utils.py  train.py  train_raw.py  utils.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.md  improved-model.md
.github/workflows/: test_black.yml  test_cli.yml  test_conda.yml  test_unittests.yml
docs/: cli.html  data.html  evaluate.html  extensions.md  faq.md  filtering.html  index.html  inference.md  model.html  predict.html  training.md  transforms.html  utils.html
openunmix/: __init__.py  cli.py  data.py  evaluate.py  evaluation.py  filtering.py  model.py  predict.py  transforms.py  utils.py
pdoc/: config.mako
scripts/: README.md  environment-cpu-linux.yml  environment-cpu-osx.yml  environment-gpu-linux-cuda10.yml  environment-gpu-linux-cuda11.yml  requirements.txt  train.py
scripts/exports/: export_environment.yml  model_to_tf.py  requirements.txt
scripts/training/: README.md  environment-cpu-osx.yml
tests/: cli_test.sh  create_dummy_datasets.sh  create_vectors.py  test_augmentations.py  test_datasets.py  test_inference.py  test_io.py  test_jit.py  test_model.py  test_regression.py  test_transforms.py  test_utils.py  test_wiener.py
tests/data/: Al James - Schoolboy Facination.json
umx/: __init__.py  data.py  eval.py  filtering.py  model.py  utils.py
